--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
 <h1>Hi there, GadkiyAbram!</h1>
-=======
 <h1>Hello, GadkiyAbram</h>
->>>>>>> parent of eef3dc1... Wrong name 2
+<p>sfsfsf</p>
+
